add generated pages to the repo

--- a/public/speakers/index.html
+++ b/public/speakers/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en-us"><head>
   <meta charset="utf-8">
   <title>Speakers information</title>
 
@@ -16,26 +16,26 @@
   
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid&#43;Serif:400%7cJosefin&#43;Sans:300,400,600,700 ">
   
-  <link rel="stylesheet" href="http://localhost:1313/plugins/bootstrap/bootstrap.min.css ">
+  <link rel="stylesheet" href="https://2025.pass-the-salt.org/plugins/bootstrap/bootstrap.min.css ">
   
-  <link rel="stylesheet" href="http://localhost:1313/plugins/themefisher-font/themefisher-font.min.css ">
+  <link rel="stylesheet" href="https://2025.pass-the-salt.org/plugins/themefisher-font/themefisher-font.min.css ">
   
-  <link rel="stylesheet" href="http://localhost:1313/plugins/slick/slick.min.css ">
+  <link rel="stylesheet" href="https://2025.pass-the-salt.org/plugins/slick/slick.min.css ">
   
 
   <!-- Main Stylesheet -->
   
-  <link rel="stylesheet" href="http://localhost:1313/scss/style.min.css" media="screen">
+  <link rel="stylesheet" href="https://2025.pass-the-salt.org/scss/style.min.css" media="screen">
 
   <!--Favicon-->
-  <link rel="shortcut icon" href="http://localhost:1313/images/favicon.png " type="image/x-icon">
-  <link rel="icon" href="http://localhost:1313/images/favicon.png " type="image/x-icon">
+  <link rel="shortcut icon" href="https://2025.pass-the-salt.org/images/favicon.png " type="image/x-icon">
+  <link rel="icon" href="https://2025.pass-the-salt.org/images/favicon.png " type="image/x-icon">
 
   
   <meta property="og:title" content="Speakers information" />
 <meta property="og:description" content="Website of the 2025 edition of the Pass the SALT conference" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://localhost:1313/speakers/" />
+<meta property="og:url" content="https://2025.pass-the-salt.org/speakers/" />
 
 
   
@@ -51,7 +51,7 @@
 <header class="sticky-top bg-white">
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="/"> <img src="http://localhost:1313/images/logo.png" alt="Pass the SALT 2024" width="103px"> </a>
+      <a class="navbar-brand" href="/"> <img src="https://2025.pass-the-salt.org/images/logo.png" alt="Pass the SALT 2024" width="103px"> </a>
       <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navigation"
         aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -155,7 +155,7 @@ Maps : <a href="https://goo.gl/maps/K8A9W8556sAmgSe66">https://goo.gl/maps/K8A9W
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <a href="/" class="mb-4 d-inline-block"> <img src="http://localhost:1313/images/logo.png" alt="Pass the SALT 2024" width="103px"> </a>
+          <a href="/" class="mb-4 d-inline-block"> <img src="https://2025.pass-the-salt.org/images/logo.png" alt="Pass the SALT 2024" width="103px"> </a>
           <ul class="list-inline footer-menu">
             
             <li class="list-inline-item">
@@ -186,15 +186,15 @@ Maps : <a href="https://goo.gl/maps/K8A9W8556sAmgSe66">https://goo.gl/maps/K8A9W
 
 
 
-<script src="http://localhost:1313/plugins/jquery/jquery.js"></script>
+<script src="https://2025.pass-the-salt.org/plugins/jquery/jquery.js"></script>
 
-<script src="http://localhost:1313/plugins/bootstrap/bootstrap.min.js"></script>
+<script src="https://2025.pass-the-salt.org/plugins/bootstrap/bootstrap.min.js"></script>
 
-<script src="http://localhost:1313/plugins/slick/slick.min.js"></script>
-
-
+<script src="https://2025.pass-the-salt.org/plugins/slick/slick.min.js"></script>
 
 
-<script src="http://localhost:1313/js/script.js"></script></body>
+
+
+<script src="https://2025.pass-the-salt.org/js/script.js"></script></body>
 
 </html>
