--- a/public/index.html
+++ b/public/index.html
@@ -90,12 +90,13 @@
 <section class="section">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-6 text-center mb-5 mb-md-0">
+			<div class="col-md-3 text-center mb-5 mb-md-0">
 				<img class="img-fluid" src="https://2025.pass-the-salt.org/images/logo-pts23.png" alt="">
 			</div>
-			<div class="col-md-6 align-self-center text-center text-md-left">
+			<div class="col-md-9 align-self-center text-center text-md-left">
 				<div class="block">
-					<h1 class="font-weight-bold mb-4 font-size-60">Pass the SALT conference<br> &gt; Lille, France<br> Université Catholique de Lille <br> &gt; July 1-3 2025</h1>
+					<h1 class="font-weight-bold mb-4 font-size-58
+					">Pass the SALT conference<br> &gt; Lille, France<br> Université Catholique de Lille <br> &gt; July 1-3 2025</h1>
 					<p class="mb-4"></p>
 					
 					
