typo fixes + practicalpage illustration

--- a/public/index.html
+++ b/public/index.html
@@ -121,7 +121,7 @@
         <div class="mb-40 text-center text-md-left">
           <i class="d-inlin-block h2 mb-10 tf-ion-ios-mic"></i>
           <h4 class="font-weight-bold mb-2">High quality talks</h4>
-          <p>2024 edition hosts <strong>21 talks</strong> covering <strong>10 Security topics</strong> (WebPKI, DFIR &amp; TI, Reverse, Network Detectection etc). Talks are all delivered <strong>by experts</strong>.</p>
+          <p>2024 edition hosted <strong>21 talks</strong> covering <strong>10 Security topics</strong> (WebPKI, DFIR &amp; TI, Reverse, Network Detectection etc). Talks are all delivered <strong>by experts</strong>.</p>
         </div>
         
         <div class="mb-40 text-center text-md-left">
@@ -139,7 +139,7 @@
         <div class="mb-40 text-center text-md-left">
           <i class="d-inlin-block h2 mb-10 tf-ion-ios-flask"></i>
           <h4 class="font-weight-bold mb-2">Workshops</h4>
-          <p>We will host no less than <strong>9 workshops</strong>. They are all be given <strong>by a project developer/maintainer or an expert on the field</strong>.<br>Come to discover and practice!</p>
+          <p>Last year, we have hosted <strong>9 workshops</strong>. All given <strong>by a project developer/maintainer or an expert on the field</strong>.<br>Come to discover and practice!</p>
         </div>
         
         <div class="mb-40 text-center text-md-left">
@@ -217,7 +217,7 @@
       <div class="col-md-6 align-self-center text-center text-md-left">
         <div class="content">
           <h2 class="subheading text-white font-weight-bold mb-10">Timeline</h2>
-          <p class="text-white"><span style='color:$primary-color'><b> &gt;December 2024:  of the 2025 edition (dates, location)</b></span><br /> January 15, 2025: opening of the Call For Papers<br /> March 30, 2025: closing of the Call For Papers<br/> Late April, 2025: notification to the speakers<br/> May 5, 2025: publication of the program &amp; booking site<br /> July 1 to 3, 2025 : the conference</p>
+          <p class="text-white">December 2024:  of the 2025 edition (dates, location)<br /> <span style='color:$primary-color'><b> &gt;January 15, 2025: opening of the Call For Papers</b></span><br /> March 30, 2025: closing of the Call For Papers<br/> Late April, 2025: notification to the speakers<br/> May 5, 2025: publication of the program &amp; booking site<br /> July 1 to 3, 2025 : the conference</p>
         </div>
       </div>
     </div>
