modify image size in practical

--- a/public/practical/index.html
+++ b/public/practical/index.html
@@ -101,7 +101,7 @@
           <p>Due to agenda conflict, we haven&rsquo;t been able to have Pass the SALT hosted by Polytech school as years before.<br><br></p>
 <p>After some research, we are very pleased and honoured to announce that the <strong>2025 edition of Pass the SALT conference will be held</strong> on the beautiful <strong>Université Catholique de Lille</strong> campus in Lille center.</p>
 <p>More detailled information will come soon here.</p>
-<img src="/images/2025-hosting.jpeg" alt="2025 Pass the SALT will be hosted by Université catholique de Lille" width="600"/>
+<img src="/images/2025-hosting.jpeg" alt="2025 Pass the SALT will be hosted by Université catholique de Lille" width="85%"/>
 <!--
 <a href="#coming-to-the-conference-location-from-lille-center">How to come</a> | <a href="#registration"> Registration</a> | <a href="#eat--drink--party">Eat, drink and party</a> | <a href="#network-access">Network access</a> | <a href="#safety--covid-information"> Safety & COVID</a>
 <br><br>
