update on the practical page

--- a/public/practical/index.html
+++ b/public/practical/index.html
@@ -98,16 +98,57 @@
       </div>
       <div class="col-lg-10 mb-5">
         <div class="content">
-          <p>Due to agenda conflict, we haven&rsquo;t been able to have Pass the SALT hosted by Polytech school as years before.<br><br></p>
-<p>After some research, we are very pleased and honoured to announce that the <strong>2025 edition of Pass the SALT conference will be held</strong> on the beautiful <strong>Université Catholique de Lille</strong> campus in Lille center.</p>
-<p>More detailled information will come soon here.</p>
-<img src="/images/2025-hosting.jpeg" alt="2025 Pass the SALT will be hosted by Université catholique de Lille" width="85%"/>
+          <p><a href="#conference-location">How to come</a> | <a href="#registration"> Registration</a>
+<br><br></p>
+<p><strong>NEW in 2025:</strong> we are very pleased and honoured to announce that the 2025 edition of Pass the SALT conference will be held on the <strong>Université Catholique de Lille</strong> campus in Lille center.</p>
+<p><img src="/images/2025-hosting.jpeg" alt="2025 Pass the SALT will be hosted by Université catholique de Lille" width="85%"/> <br></p>
+<h2 id="conference-location">Conference location</h2>
+<ul>
+<li><a href="https://www.univ-catholille.fr/en/">Université Catholique de Lille </a>:
+83 Bd Vauban, 59800 Lille<br /></li>
+<li>Inside school location: campus Saint Raphaël, Building Louise WEISS (amphi 122 + rooms LW109 &amp; LW112)</li>
+<li>Maps: <a href="https://maps.app.goo.gl/J2uYiRaoKP7VmMSk8" >Google Maps</a> | <a href="https://osm.org/go/0EgIjC2uR" >Openstreetmap</a> <br></li>
+</ul>
+<h2 id="coming-to-the-conference-location-from-lille-stations-area">Coming to the conference location from Lille stations area</h2>
+<ul>
+<li><b>Bus:</b> take line <strong>L5</strong> (~17min)</li>
+<li>reach the <em>&ldquo;Gare Lille Flandres&rdquo;</em> <a href="https://maps.app.goo.gl/DhmhktrX1PyJCVrh6">bus stop</a>. It is located 150m from the Lille Flandres station exit on your right. And it is located at 300m from the Lille Europe station exit in direction the the center of Lille.
+<ul>
+<li>take the L5 bus (direction <em>&ldquo;Le Parc (Haubourdin)&rdquo;</em>) and get off the bus at the <em>&ldquo;Université Catholique&rdquo;</em> stop.</li>
+<li><em>More info about the public transport network in Lille: <a href="https://www.ilevia.fr/itineraires">ilevia.fr</a></em></li>
+</ul>
+</li>
+<li><b>On foot:</b> 30min.</li>
+</ul>
+<h2 id="coming-to-lille-from-paris">Coming to Lille from Paris</h2>
+<ul>
+<li><strong>from &ldquo;Gare du Nord&rdquo; station:</strong> take TGV train to <em>&ldquo;Lille Europe&rdquo;</em> or <em>&ldquo;Lille Flandres&rdquo;</em> stations : 60 min</li>
+<li><strong>from &ldquo;Paris Roissy Charles de Gaulle airport&rdquo; (CDG)</strong> : take TGV train at <em>&ldquo;Charles de Gaulle&rdquo;</em> train station inside the airport to <em>&ldquo;Lille Europe&rdquo;</em> station : 50 min</li>
+</ul>
+<h2 id="coming-to-lille-from-brussels">Coming to Lille from Brussels</h2>
+<ul>
+<li><strong>from Brussels Midi train station</strong> : take a TGV or Thalys or Eurostar train to <em>&ldquo;Lille Europe&rdquo;</em> station : 35 min</li>
+<li><strong>from Brussels National airport (BRU)</strong> : use a national train to reach <em>&ldquo;Brussels Midi&rdquo;</em> station (<em>Zuidstation</em> in Dutch): 30-40 min. Then, take a TGV or Thalys or Eurostar train to reach <em>&ldquo;Lille Europe&rdquo;</em> station.</li>
+</ul>
+<p>To book trains:</p>
+<ul>
+<li><strong>France:</strong> <a href="https://www.sncf-connect.com/en-en/"><a href="https://www.sncf-connect.com/en-en/">https://www.sncf-connect.com/en-en/</a></a>. <br></li>
+<li><strong>Belgium:</strong> <a href="https://www.b-europe.com/EN"><a href="https://www.b-europe.com/EN">https://www.b-europe.com/EN</a></a>
+<br></li>
+</ul>
+<h2 id="registration">Registration</h2>
+<p>The booking website will be online on May, 1st 2025.</p>
+<p>Before coming to the conference:</p>
+<ul>
+<li>Be registered online</li>
+<li>Print your ticket or have the PDF version with you on your smartphone.</li>
+</ul>
+<br>
 <!--
-<a href="#coming-to-the-conference-location-from-lille-center">How to come</a> | <a href="#registration"> Registration</a> | <a href="#eat--drink--party">Eat, drink and party</a> | <a href="#network-access">Network access</a> | <a href="#safety--covid-information"> Safety & COVID</a>
+<a href="#coming-to-the-conference-location-from-lille-flandres-stations">How to come</a> | <a href="#registration"> Registration</a> | <a href="#eat--drink--party">Eat, drink and party</a> | <a href="#network-access">Network access</a> | <a href="#safety--covid-information"> Safety & COVID</a>
 <br><br>
 
 ## Conference location
-
 
 <a href="http://www.polytech-lille.fr/english-p4664.html">Polytech Lille engineer school</a>:
 avenue Paul Langevin 59655 Villeneuve d'Ascq<br />
