update practical & speakers pages

--- a/public/speakers/index.html
+++ b/public/speakers/index.html
@@ -98,26 +98,31 @@
       </div>
       <div class="col-lg-10 mb-5">
         <div class="content">
-          <p><a href="#speakers-dinner">The speakers dinner</a> | <a href="#hotels">How to sleep</a> | <a href="#talks--slides">Your présentation</a> | <a href="#lecture-hall">The Lecture Hall</a> | <a href="#workshop-room"> The Workshop Room</a> <br><br></p>
+          <p><a href="#speakers-dinner">Speakers dinner</a> | <a href="#hotels">How to sleep</a> | <a href="#talks--slides">Your presentation</a> | <a href="#lecture-hall"> Lecture Hall</a> | <a href="#workshop-room"> Workshop Room</a> | <a href="#recording"> Recording</a> | <a href="#network-access"> Network</a><br><br></p>
 <p>You will find on this page specific information for speakers (slides, rooms equipments, setup testing recommandation) and also, the speakers dinner and some not so trustable advices about hotels ;-) <br><br></p>
-<p><strong>IMPORTANT:</strong> <strong>all other practical information</strong> (conference location, how to come, <strong>NEW:</strong> access control, on-site registration, eat/drink/social event &hellip;) are located on the <a href="/practical/">general practical info page</a>.<br><br></p>
+<p><strong>IMPORTANT:</strong> <strong>all other practical information</strong> (conference location, how to come, registration, eat/drink/social event &hellip;) are located on the <a href="/practical/">general practical info page</a>.<br><br></p>
 <h1 id="speakers-dinner">Speakers dinner</h1>
-<p>On Wednesday evening, we will have a lunch with all the speakers who have accepted to come and the org team.<br>
-It will be held at :<br><br></p>
-<p>Las Tapas, 116 Rue Saint-André, 59000 Lille<br>
-Maps : <a href="https://goo.gl/maps/K8A9W8556sAmgSe66">https://goo.gl/maps/K8A9W8556sAmgSe66</a> <br><br></p>
-<p><strong>IMPORTANT</strong> as shown on the map, it is at a 22min walk from the Lille Flandres train station. And no public transportation to reach it. So, if for any of you, for <strong>any</strong> reason, it is a problem to walk this duration, just raise your hand! We will book a Uber or Taxi for you, no problem for that! <br><br></p>
-<p>It will start at 8:00PM / 20h00.<br><br></p>
+<p>On Tuesday July 1 evening, we will have a lunch with all the speakers who have accepted to come and the org team.<br><br>
+It will be held at :</p>
+<ul>
+<li>Location will be updated during May</li>
+<li>Maps: to come</li>
+</ul>
 <p>The dinner will be paid by the event, with a package for the drinks.<br><br></p>
 <h1 id="hotels">Hotels</h1>
 <p>It is not an easy task to give you a trustable advice for your hotel. All we can do is to share with you the hotels we have used by the past. They all provide nights between 100€ and 140€.<br><br></p>
 <p>No air conditionning, less expensive:<br></p>
-<p><a href="https://www.grandhotellille.com/">Grand Hotel</a><br>
-<a href="https://www.hotel-lille-ambassadeur.fr/">Ambassadeur Hotel</a><br><br></p>
+<ul>
+<li><a href="https://hotel-chagnot-lille.com/">Hôtel Chagnot</a></li>
+<li><a href="https://www.grandhotellille.com/">Grand Hotel</a></li>
+<li><a href="https://www.hotel-lille-ambassadeur.fr/">Ambassadeur Hotel</a></li>
+</ul>
 <p>More expensive, with AC:<br></p>
-<p><a href="https://www.okkohotels.com/en/page/lille/.3097.html">Okko Hotel</a><br>
-<a href="https://www.hotellavaliz.com/">La Valiz Hotel</a><br><br></p>
-<p>The best advice we can share is for <b>the location of the hotel</b>: <b>try to stay around the Bruxelles or Flandres stations area</b>. This way you will be near the center of Lille and also near the &ldquo;Lille Flandres&rdquo; metro station (under the &ldquo;Lille Flandres&rdquo; trains station) you will use to reach the conference location.<br><br></p>
+<ul>
+<li><a href="https://www.okkohotels.com/en/page/lille/.3097.html">Okko Hotel</a><br></li>
+<li><a href="https://www.hotellavaliz.com/">La Valiz Hotel</a><br><br></li>
+</ul>
+<p>The best advice we can share is for <b>the location of the hotel</b>: <b>try to stay around the Bruxelles or Flandres stations area</b>. This way you will be near the center of Lille and also near the &ldquo;Gare Lille Flandres&rdquo; bus stop where you will take the bus n°5 to reach the conference location.<br><br></p>
 <p><strong>Important:</strong> other practical information (location, how to come, eat/drink etc) are available on the <a href="/practical/">dedicated practical info page</a> !<br><br></p>
 <h1 id="talks--slides">Talks &amp; slides</h1>
 <p><strong>Test your video setup BEFORE your talk:</strong> please come during the pause (or before the start of the morning / afternoon session) on stage in order to test your laptop with the video system.
@@ -133,20 +138,13 @@ Maps : <a href="https://goo.gl/maps/K8A9W8556sAmgSe66">https://goo.gl/maps/K8A9W
 <p><strong>IMPORTANT send us your speaker deck:</strong> we will greatly appreciate if you can provide your slides before your talk or just after it. We try to provide them to all attendees (on-site and online ones) as soon as possible on our <a href="https://archives.pass-the-salt.org/Pass%20the%20SALT/">archives site</a>.
 <br><br></p>
 <h1 id="lecture-hall">Lecture hall</h1>
-<p><strong>Main screen and projector:</strong> the two are very recent ones and the screen is bigger than the previous one, for those who were there in 2018-2019 :)</p>
-  <center><img src="/images/main-room-screen.jpeg" height="153" width="204"  alt="main-screen"></center>
-<p><strong>Plugs:</strong> on stage, you will have HDMI and VGA plugs for video signal and some electrical plugs.
-<br><br></p>
-<p><strong>Feedback screens:</strong> you will have one feedback screen at the back of the hall (use big size fonts!). We can not be sure to provide you also another feedback screen near the stage. Sorry for that.
-<br><br></p>
-  <center><img src="/images/feedback-screen.jpeg" height="204" width="153"  alt="feedback-screen"></center>
-<p><strong>Recording:</strong> this year, your talk will be live streamed and recorded by <a href="https://x.com/Ministraitor">@Ministraitor aka Cooper</a>. The video will then be uploaded to our <a href="https://passthesalt.ubicast.tv/">Pass the SALT portal</a> and also on our <a href="https://archives.pass-the-salt.org/Pass%20the%20SALT/">archives site</a>.
-<br><br></p>
+<p>We will provide all information about rooms facilities (projectors, screens, plugs etc) as soon as we will get them.</p>
 <h1 id="workshop-room">Workshop room</h1>
-<p><strong>screen and projector:</strong> you will have a very recent screen and projector.
-<br><br></p>
-<p><strong>network access:</strong> every participant who has accepted it during registration process will received a network access (we work to get non filtered SSH output among other things).</p>
-<center><img src="/images/workshop-room.jpeg" height="153" width="204"  alt="workshop room"></center> <br><br>
+<p>Rooms will have a screen and projector.</p>
+<h1 id="recording">Recording</h1>
+<p>This year, your talk will be live streamed and recorded by our friends from <a href="https://ubicast.eu/en/">Ubicast</a>. The video will then be uploaded to our <a href="https://passthesalt.ubicast.tv/">Pass the SALT page on Ubicast portal</a> and also on our <a href="https://archives.pass-the-salt.org/Pass%20the%20SALT/">archives site</a>.</p>
+<h1 id="network-access">Network access</h1>
+<p>Wi-fi is expected and we will work to get non filtered SSH output among other things.</p>
 
         </div>
       </div>
