--- a/public/practical/index.html
+++ b/public/practical/index.html
@@ -98,27 +98,40 @@
       </div>
       <div class="col-lg-10 mb-5">
         <div class="content">
-          <p><a href="#conference-location">How to come</a> | <a href="#registration"> Registration</a>
+          <p><a href="#conference-location">How to come</a> | <a href="#registration"> Registration</a> | <a href="#social-event"> Social event</a> | <a href="#pauses"> Pauses </a> | <a href="#mid-day-lunchs"> Lunchs</a>
 <br><br></p>
 <p><strong>NEW in 2025:</strong> we are very pleased and honoured to announce that the 2025 edition of Pass the SALT conference will be held on the <strong>Université Catholique de Lille</strong> campus in Lille center.</p>
 <p><img src="/images/2025-hosting.jpeg" alt="2025 Pass the SALT will be hosted by Université catholique de Lille" width="85%"/> <br></p>
 <h2 id="conference-location">Conference location</h2>
 <ul>
-<li><a href="https://www.univ-catholille.fr/en/">Université Catholique de Lille </a>:
+<li><strong>Address:</strong> <a href="https://www.univ-catholille.fr/en/">Université Catholique de Lille </a>:
 83 Bd Vauban, 59800 Lille<br /></li>
-<li>Inside school location: campus Saint Raphaël, Building Louise WEISS (amphi 122 + rooms LW109 &amp; LW112)</li>
-<li>Maps: <a href="https://maps.app.goo.gl/J2uYiRaoKP7VmMSk8" >Google Maps</a> | <a href="https://osm.org/go/0EgIjC2uR" >Openstreetmap</a> <br></li>
+<li><strong>Inside school location:</strong>
+<ul>
+<li><em>campus:</em> Saint Raphaël</li>
+<li><em>building:</em> Louise WEISS</li>
+<li><em>rooms:</em> amphi 122 + rooms LW109 &amp; LW112)</li>
+</ul>
+</li>
+<li><strong>Maps:</strong> <a href="https://maps.app.goo.gl/J2uYiRaoKP7VmMSk8" >Google Maps</a> | <a href="https://osm.org/go/0EgIjC2uR" >Openstreetmap</a> <br></li>
 </ul>
 <h2 id="coming-to-the-conference-location-from-lille-stations-area">Coming to the conference location from Lille stations area</h2>
+<p><img src="/images/bus-5-gare-lille-flandres.jpg" alt="Bus stop Line 5 near Gare Lille Flandres" width="50%"/> <br></p>
 <ul>
-<li><b>Bus:</b> take line <strong>L5</strong> (~17min)</li>
-<li>reach the <em>&ldquo;Gare Lille Flandres&rdquo;</em> <a href="https://maps.app.goo.gl/DhmhktrX1PyJCVrh6">bus stop</a>. It is located 150m from the Lille Flandres station exit on your right. And it is located at 300m from the Lille Europe station exit in direction the the center of Lille.
+<li><strong>Bus:</strong> take line <strong>L5</strong> (~17min)
 <ul>
-<li>take the L5 bus (direction <em>&ldquo;Le Parc (Haubourdin)&rdquo;</em>) and get off the bus at the <em>&ldquo;Université Catholique&rdquo;</em> stop.</li>
+<li><strong>Bus stop:</strong> <em>&ldquo;Gare Lille Flandres&rdquo;</em> <a href="https://maps.app.goo.gl/DhmhktrX1PyJCVrh6">bus stop</a>.
+<ul>
+<li>From the Lille Flandres station exit: 150m on your right.</li>
+<li>From the Lille Europe station exit: 300m in direction to the center of Lille.</li>
+</ul>
+</li>
+<li><strong>Direction:</strong> <em>&ldquo;Le Parc (Haubourdin)&rdquo;</em></li>
+<li><strong>Exit:</strong> <em>&ldquo;Université Catholique&rdquo;</em> stop</li>
 <li><em>More info about the public transport network in Lille: <a href="https://www.ilevia.fr/itineraires">ilevia.fr</a></em></li>
 </ul>
 </li>
-<li><b>On foot:</b> 30min.</li>
+<li><strong>On foot:</strong> 30min.</li>
 </ul>
 <h2 id="coming-to-lille-from-paris">Coming to Lille from Paris</h2>
 <ul>
@@ -143,72 +156,21 @@
 <li>Be registered online</li>
 <li>Print your ticket or have the PDF version with you on your smartphone.</li>
 </ul>
-<br>
+<h2 id="pauses">Pauses</h2>
+<ul>
+<li>They are provided for free by the organization.</li>
+<li>They are served at the start and half of each morning and afternoon.</li>
+</ul>
+<h2 id="mid-day-lunchs">Mid day lunchs</h2>
+<p>You&rsquo;ll be able to find lunchtime refreshments close to the school. More precise information will come here before the start of the conference.</p>
+<h2 id="social-event">Social event</h2>
+<ul>
+<li>We will communicate during the event the social event location.</li>
+<li>It will be held during Wednesday July 2 evening.</li>
+<li>To access, your badge will be required.</li>
+<li><strong>Important:</strong> the first 2 drinks are paid by the event with usually some light food. The rest of the food/beers/softs will be at your charge ;)</li>
+</ul>
 <!--
-<a href="#coming-to-the-conference-location-from-lille-flandres-stations">How to come</a> | <a href="#registration"> Registration</a> | <a href="#eat--drink--party">Eat, drink and party</a> | <a href="#network-access">Network access</a> | <a href="#safety--covid-information"> Safety & COVID</a>
-<br><br>
-
-## Conference location
-
-<a href="http://www.polytech-lille.fr/english-p4664.html">Polytech Lille engineer school</a>:
-avenue Paul Langevin 59655 Villeneuve d'Ascq<br />
-Maps: <a href="https://goo.gl/maps/FusMa2F2GoP2" >Google Maps</a> | <a href="https://osm.org/go/0B1fyc2nJ-" >Openstreetmap</a> (<i>"École polytechnique universitaire de l'université Lille"</i>)<br>
-<img src="https://2024.pass-the-salt.org/images/polytech-school.jpg" width="100%">
-<br><br>
-
-
-## Coming to the conference location from Lille center 
-
-.&nbsp; <b>metro:</b> take <b>line 1</b> at _"Lille Flandres"_ station and go to the _"4 Cantons Stade"_ stop : ~20 min.<br>
-_(More info about metro: [ilevia.fr](https://www.ilevia.fr/itineraires))_<br>
-.&nbsp; <b>then a 2min walk:</b> on the roundabout near the metro stop, just follow _"Polytech Lille"_ on the traffic signs and the line drawned on the map screenshot below. Links to the maps:  <a href="https://goo.gl/maps/FusMa2F2GoP2" >Google Maps</a> | <a href="https://osm.org/go/0B1fyc2nJ-" >Openstreetmap</a> <br>
-<img src="https://2024.pass-the-salt.org/images/roundabout.jpg" width="100%">
-<img src="/images/road.png" width="60%">
-<br>
-
-<br><br>
-
-## Coming to Lille from Paris
-
-.&nbsp; **from "Gare du Nord" station:** take TGV train to _"Lille Europe"_ or _"Lille Flandres"_ stations : 60 min
-<br>
-.&nbsp; **from "Paris Roissy Charles de Gaulle airport" (CDG)** : take TGV train at _"Charles de Gaulle"_ train station inside the airport to _"Lille Europe"_ station : 50 min<br><br>
-
-## Coming to Lille from Brussels
-
-.&nbsp; **from Brussels Midi train station** : take a TGV or Thalys or Eurostar train to _"Lille Europe"_ station : 35 min
-<br>
-.&nbsp; **from Brussels National airport (BRU)** : use a national train to reach _"Brussels Midi"_ station (_Zuidstation_ in Dutch): 30-40 min. Then, take a TGV or Thalys or Eurostar train to reach _"Lille Europe"_ station.
-<br><br>
-
-To book trains: <br>
-.&nbsp; **France:** <a href="https://www.sncf-connect.com/en-en/">https://www.sncf-connect.com/en-en/</a>. <br>
-.&nbsp; **Belgium:** <a href="https://www.b-europe.com/EN">https://www.b-europe.com/EN</a>
-<br><br>
-
-## Registration
-
-**Before coming to the conference:**
-<br><br>
-> . Be registered online 
-<br>
-> . Print your ticket or have the PDF version with you on your smartphone.
-
-<br>
-
-**On-site:**
-> . **Important:** before entering Polytech building, **provide your registered name AND an ID card/passport to access control guys**.<br>
-> . inside the building, provide the PDF or printed ticket to the org members at the desk.
-<br>
-> . we will give you a badge with your name and coins usable to get free drinks during the social event (thursday evening!).
-
-<br>
-
-**Workshops:**<br> Registration to the workshops will be done during the event under an old fashion way (paper and pen) at the desk on a first write/first served basis. All workshops have 15 slots.
-<br><br>
-
-## Eat & drink & party!
-
 **For lunch:** <br>
 .&nbsp;<b>a food truck</b> will be available at the conference site (parking in front of the main entrance). <br>
 .&nbsp;<b>restaurants and food stands</b> are also available at a 7 minutes walk from the conference site, near the Pierre Mauroy stadium (<a href="https://www.openstreetmap.org/#map=17/50.61086/3.13028)" >OpenStreetMap</a> / <a href="https://www.google.fr/maps/dir/Polytech+Lille,+Avenue+Paul+Langevin,+59655+Villeneuve-d'Ascq/50.6106614,3.1317252/@50.6098992,3.129625,16z/data=!4m9!4m8!1m5!1m1!1s0x47c2d64e4e520ecf:0xb4c46b1a1dfff7d6!2m2!1d3.1368716!2d50.607675!1m0!3e2" >Google Maps</a>).
