--- a/public/practical/index.html
+++ b/public/practical/index.html
@@ -118,7 +118,7 @@
 <h2 id="coming-to-the-conference-location-from-lille-stations-area">Coming to the conference location from Lille stations area</h2>
 <p><img src="/images/bus-5-gare-lille-flandres.jpg" alt="Bus stop Line 5 near Gare Lille Flandres" width="50%"/> <br></p>
 <ul>
-<li><strong>Bus:</strong> take line <strong>L5</strong> (~17min)
+<li><strong>Bus:</strong> take line <strong>L5</strong>
 <ul>
 <li><strong>Bus stop:</strong> <em>&ldquo;Gare Lille Flandres&rdquo;</em> <a href="https://maps.app.goo.gl/DhmhktrX1PyJCVrh6">bus stop</a>.
 <ul>
@@ -128,6 +128,7 @@
 </li>
 <li><strong>Direction:</strong> <em>&ldquo;Le Parc (Haubourdin)&rdquo;</em></li>
 <li><strong>Exit:</strong> <em>&ldquo;Université Catholique&rdquo;</em> stop</li>
+<li><strong>Duration:</strong> ~17min</li>
 <li><em>More info about the public transport network in Lille: <a href="https://www.ilevia.fr/itineraires">ilevia.fr</a></em></li>
 </ul>
 </li>
