--- a/public/speakers/index.html
+++ b/public/speakers/index.html
@@ -123,7 +123,7 @@ It will be held at :</p>
 <li><a href="https://www.hotellavaliz.com/">La Valiz Hotel</a><br><br></li>
 </ul>
 <p>The best advice we can share is for <b>the location of the hotel</b>: <b>try to stay around the Bruxelles or Flandres stations area</b>. This way you will be near the center of Lille and also near the &ldquo;Gare Lille Flandres&rdquo; bus stop where you will take the bus n°5 to reach the conference location.<br><br></p>
-<p><strong>Important:</strong> other practical information (location, how to come, eat/drink etc) are available on the <a href="/practical/">dedicated practical info page</a> !<br><br></p>
+<p><strong>Important:</strong> other practical information (location, how to come etc) are available on the <a href="/practical/">dedicated practical info page</a> !<br><br></p>
 <h1 id="talks--slides">Talks &amp; slides</h1>
 <p><strong>Test your video setup BEFORE your talk:</strong> please come during the pause (or before the start of the morning / afternoon session) on stage in order to test your laptop with the video system.
 <br><br></p>
@@ -131,7 +131,7 @@ It will be held at :</p>
 <br><br></p>
 <p><strong>Speaker deck template and format:</strong> Pass the SALT does not provide nor require any kind of template. We prefer to receive PDF files. You can also provide LibreOffice format if you preferred. Powerpoint, anyone? You are at Pass the SALT, please ;-)
 <br><br></p>
-<p><strong>Code of Conduct:</strong> Pass the SALT has a <a href="https://2024.pass-the-salt.org/code-of-conduct/">code of conduct</a> for attendees and for speakers too, obviously. Your words and your slides will have to follow it without exception. Thanks in advance!
+<p><strong>Code of Conduct:</strong> Pass the SALT has a <a href="/code-of-conduct/">code of conduct</a> for attendees and for speakers too, obviously. Your words and your slides will have to follow it without exception. Thanks in advance!
 <br><br></p>
 <p><strong>Logo:</strong> you can use our logo on your speaker deck. The correct source for it is in this <a href="https://github.com/pass-the-salt/2024-communication/tree/main/logo/">repository</a>.
 <br><br></p>
