update speakers and practical pages

--- a/public/practical/index.html
+++ b/public/practical/index.html
@@ -151,7 +151,7 @@
 <br></li>
 </ul>
 <h2 id="registration">Registration</h2>
-<p>The booking website will be online on May, 1st 2025.</p>
+<p>The booking website will be online on May, 5th 2025.</p>
 <p>Before coming to the conference:</p>
 <ul>
 <li>Be registered online</li>
