--- a/public/speakers/index.html
+++ b/public/speakers/index.html
@@ -138,9 +138,9 @@ It will be held at :</p>
 <p><strong>IMPORTANT send us your speaker deck:</strong> we will greatly appreciate if you can provide your slides before your talk or just after it. We try to provide them to all attendees (on-site and online ones) as soon as possible on our <a href="https://archives.pass-the-salt.org/Pass%20the%20SALT/">archives site</a>.
 <br><br></p>
 <h1 id="lecture-hall">Lecture hall</h1>
-<p>We will provide all information about rooms facilities (projectors, screens, plugs etc) as soon as we will get them.</p>
+<p>The projector will provide a 16:9 image ratio and an input HDMI port. A desk with sound will be available for speakers.</p>
 <h1 id="workshop-room">Workshop room</h1>
-<p>Rooms will have a screen and projector.</p>
+<p>Rooms will have a screen and a projector (16:9, HDMI input port).</p>
 <h1 id="recording">Recording</h1>
 <p>This year, your talk will be live streamed and recorded by our friends from <a href="https://ubicast.eu/en/">Ubicast</a>. The video will then be uploaded to our <a href="https://passthesalt.ubicast.tv/">Pass the SALT page on Ubicast portal</a> and also on our <a href="https://archives.pass-the-salt.org/Pass%20the%20SALT/">archives site</a>.</p>
 <h1 id="network-access">Network access</h1>
