--- a/public/speakers/index.html
+++ b/public/speakers/index.html
@@ -102,7 +102,7 @@
 <p>You will find on this page specific information for speakers (slides, rooms equipments, setup testing recommandation) and also, the speakers dinner and some not so trustable advices about hotels ;-) <br><br></p>
 <p><strong>IMPORTANT:</strong> <strong>all other practical information</strong> (conference location, how to come, registration, eat/drink/social event &hellip;) are located on the <a href="/practical/">general practical info page</a>.<br><br></p>
 <h1 id="speakers-dinner">Speakers dinner</h1>
-<p>On Tuesday July 1 evening, we will have a lunch with all the speakers who have accepted to come and the org team.<br><br>
+<p>On Tuesday July 1 evening, we will have a dinner with all the speakers who have accepted to come and the org team.<br><br>
 It will be held at :</p>
 <ul>
 <li>Location will be updated during May</li>
