add more transport alternatives in Lille to reach the Catholic University

--- a/public/practical/index.html
+++ b/public/practical/index.html
@@ -124,24 +124,40 @@
 <li><strong>Maps:</strong> <a href="https://maps.app.goo.gl/J2uYiRaoKP7VmMSk8" >Google Maps</a> | <a href="https://osm.org/go/0EgIjC2uR" >Openstreetmap</a> <br></li>
 </ul>
 <h2 id="coming-to-the-conference-location-from-lille-stations-area">Coming to the conference location from Lille stations area</h2>
-<p><img src="/images/bus-5-gare-lille-flandres.jpg" alt="Bus stop Line 5 near Gare Lille Flandres" width="50%"/> <br></p>
+<p><img src="/images/bus-5-gare-lille-flandres.jpg" alt="Bus stop Line 5 near Gare Lille Flandres" width="50%"/> <br>
+<em>How to reach the L5 bus stop at Gare Lille Flandres</em></p>
+<p>You have <strong>three main options</strong> :</p>
+<ol>
+<li><strong>Bus: take line L5</strong> (every ~10min)</li>
+</ol>
 <ul>
-<li><strong>Bus:</strong> take line <strong>L5</strong>
-<ul>
-<li><strong>Bus stop:</strong> <em>&ldquo;Gare Lille Flandres&rdquo;</em> <a href="https://maps.app.goo.gl/DhmhktrX1PyJCVrh6">bus stop</a>.
-<ul>
-<li>From the Lille Flandres station exit: 150m on your right.</li>
-<li>From the Lille Europe station exit: 300m in direction to the center of Lille.</li>
-</ul>
-</li>
+<li><strong>Bus stop:</strong> <em>&ldquo;Gare Lille Flandres&rdquo;</em> <a href="https://maps.app.goo.gl/DhmhktrX1PyJCVrh6">bus stop</a>. From the Lille Flandres station exit: 150m on your right. From the Lille Europe station exit: 300m in direction to the center of Lille.</li>
 <li><strong>Direction:</strong> <em>&ldquo;Le Parc (Haubourdin)&rdquo;</em></li>
-<li><strong>Exit:</strong> <em>&ldquo;Université Catholique&rdquo;</em> stop</li>
-<li><strong>Duration:</strong> ~17min</li>
+<li><strong>Exit:</strong> <em>&ldquo;Université Catholique&rdquo;</em> stop and <strong>then walk to the 83 Boulevard Vauban</strong>, about 5min journey.</li>
+<li><strong>Total duration:</strong> ~17min</li>
 <li><em>More info about the public transport network in Lille: <a href="https://www.ilevia.fr/itineraires">ilevia.fr</a></em></li>
 </ul>
-</li>
-<li><strong>On foot:</strong> 30min.</li>
+<ol start="2">
+<li><strong>Metro:</strong> line <strong>M1</strong> (every 2min)</li>
+</ol>
+<ul>
+<li><strong>From:</strong> <em>&ldquo;Lille Flandres&rdquo;</em> station</li>
+<li><strong>Direction:</strong> <em>&ldquo;Lille Chu Eurasanté&rdquo;</em></li>
+<li><strong>Exit:</strong> <em>&ldquo;Gambetta&rdquo;</em> stop and <strong>then walk to the 83 Boulevard Vauban, about 13min journey</strong>.</li>
+<li><strong>Total duration:</strong> ~17min</li>
+<li><em>More info about the public transport network in Lille: <a href="https://www.ilevia.fr/itineraires">ilevia.fr</a></em></li>
 </ul>
+<ol start="3">
+<li><strong>Metro:</strong> line <strong>M2</strong> (every 2min)</li>
+</ol>
+<ul>
+<li><strong>From:</strong> <em>&ldquo;Lille Flandres&rdquo;</em> or <em>&ldquo;Lille Europe&rdquo;</em> stations</li>
+<li><strong>Direction:</strong> <em>&ldquo;Lomme St. Philibert&rdquo;</em></li>
+<li><strong>Exit:</strong> <em>&ldquo;Cormontaigne&rdquo;</em> stop and <strong>then walk to the 83 Boulevard Vauban, about 10min journey</strong>.</li>
+<li><strong>Total duration:</strong> ~20min</li>
+<li><em>More info about the public transport network in Lille: <a href="https://www.ilevia.fr/itineraires">ilevia.fr</a></em></li>
+</ul>
+<p>And if you want to reach the university from the stations <strong>on foot</strong>, it will be a 30min walk.</p>
 <h2 id="coming-to-lille-from-paris">Coming to Lille from Paris</h2>
 <ul>
 <li><strong>from &ldquo;Gare du Nord&rdquo; station:</strong> take TGV train to <em>&ldquo;Lille Europe&rdquo;</em> or <em>&ldquo;Lille Flandres&rdquo;</em> stations : 60 min</li>
@@ -171,7 +187,7 @@
 <li>They are served at the start and half of each morning and afternoon.</li>
 </ul>
 <h2 id="mid-day-lunchs">Mid day lunchs</h2>
-<p>You&rsquo;ll be able to find lunchtime refreshments close to the school. More precise information will come here before the start of the conference.</p>
+<p>You&rsquo;ll be able to find lunchtime refreshments around the school (from 5 to 20min) from traditional restaurants to street food restaurants from all over the world.</p>
 <h2 id="social-event">Social event</h2>
 <ul>
 <li>We will communicate during the event the social event location.</li>
