add more information on practical and speakers pages

--- a/public/practical/index.html
+++ b/public/practical/index.html
@@ -111,6 +111,7 @@
 <p><strong>NEW in 2025:</strong> we are very pleased and honoured to announce that the 2025 edition of Pass the SALT conference will be held on the <strong>Université Catholique de Lille</strong> campus in Lille center.</p>
 <p><img src="/images/2025-hosting.jpeg" alt="2025 Pass the SALT will be hosted by Université catholique de Lille" width="85%"/> <br></p>
 <h2 id="conference-location">Conference location</h2>
+<p><img src="/images/university-entrance.jpg" alt="Entrance of the Université catholique de Lille" width="50%"/> <br></p>
 <ul>
 <li><strong>Address:</strong> <a href="https://www.univ-catholille.fr/en/">Université Catholique de Lille </a>:
 83 Bd Vauban, 59800 Lille<br /></li>
