--- a/public/speakers/index.html
+++ b/public/speakers/index.html
@@ -107,15 +107,12 @@
       <div class="col-lg-10 mb-5">
         <div class="content">
           <p><a href="#speakers-dinner">Speakers dinner</a> | <a href="#hotels">How to sleep</a> | <a href="#talks--slides">Your presentation</a> | <a href="#lecture-hall"> Lecture Hall</a> | <a href="#workshop-room"> Workshop Room</a> | <a href="#recording"> Recording</a> | <a href="#network-access"> Network</a><br><br></p>
-<p>You will find on this page specific information for speakers (slides, rooms equipments, setup testing recommandation) and also, the speakers dinner and some not so trustable advices about hotels ;-) <br><br></p>
+<p>You will <strong>find on this page specific information for speakers</strong> (slides, rooms equipments, setup testing recommandation) and also, the speakers dinner and some not so trustable advices about hotels ;-) <br><br></p>
 <p><strong>IMPORTANT:</strong> <strong>all other practical information</strong> (conference location, how to come, registration, eat/drink/social event &hellip;) are located on the <a href="/practical/">general practical info page</a>.<br><br></p>
 <h1 id="speakers-dinner">Speakers dinner</h1>
-<p>On Tuesday July 1 evening, we will have a dinner with all the speakers who have accepted to come and the org team.<br><br>
-It will be held at :</p>
-<ul>
-<li>Location will be updated during May</li>
-<li>Maps: to come</li>
-</ul>
+<p>On Tuesday July 1 evening, we will have a dinner with all the speakers who have accepted to come and the org team.<br><br></p>
+<p>The meeting point will be in front of the Lille Flandres Station main entrance in order to go together to the restaurant leaving at 7:00PM/19h00:<br></p>
+<p><img src="/images/meeting-point.jpg" alt="meeting-point" width="50%"/> <br></p>
 <p>The dinner will be paid by the event, with a package for the drinks.<br><br></p>
 <h1 id="hotels">Hotels</h1>
 <p>It is not an easy task to give you a trustable advice for your hotel. All we can do is to share with you the hotels we have used by the past. They all provide nights between 100€ and 140€.<br><br></p>
@@ -146,7 +143,16 @@ It will be held at :</p>
 <p><strong>IMPORTANT send us your speaker deck:</strong> we will greatly appreciate if you can provide your slides before your talk or just after it. We try to provide them to all attendees (on-site and online ones) as soon as possible on our <a href="https://archives.pass-the-salt.org/Pass%20the%20SALT/">archives site</a>.
 <br><br></p>
 <h1 id="lecture-hall">Lecture hall</h1>
-<p>The projector will provide a 16:9 image ratio and an input HDMI port. A desk with sound will be available for speakers.</p>
+<p>The lecture hall description and features:</p>
+<ul>
+<li>270 people max</li>
+<li>FR electricity plugs every two seats</li>
+<li>a main screen and 1 TV screen on each side</li>
+<li>16:9 image ratio</li>
+<li>input HDMI port and some adaptors (protip: come with yours you know they work with your laptop).</li>
+<li>a desk with sound will be available for speakers.</li>
+</ul>
+<img src="/images/hall1.jpg" alt="lecture hall" width="50%"/>
 <h1 id="workshop-room">Workshop room</h1>
 <p>Rooms will have a screen and a projector (16:9, HDMI input port).</p>
 <h1 id="recording">Recording</h1>
