add some details about mid day breaks

--- a/public/practical/index.html
+++ b/public/practical/index.html
@@ -188,7 +188,11 @@
 <li>They are served at the start and half of each morning and afternoon.</li>
 </ul>
 <h2 id="mid-day-lunchs">Mid day lunchs</h2>
-<p>You&rsquo;ll be able to find lunchtime refreshments around the school (from 5 to 20min) from traditional restaurants to street food restaurants from all over the world.</p>
+<ul>
+<li>Mid day lunchs are <strong>not provided</strong> by the organisation.</li>
+<li>You&rsquo;ll be able to find lunchtime refreshments around the school (from 5 to 20min) from traditional restaurants to street food restaurants from all over the world.</li>
+<li><strong>Mid day break</strong> lasts <strong>1h50 on Wednesday</strong> July 2 and <strong>2h00 on Thursday</strong> July 3</li>
+</ul>
 <h2 id="social-event">Social event</h2>
 <ul>
 <li>We will communicate during the event the social event location.</li>
