some typo fixes

--- a/public/practical/index.html
+++ b/public/practical/index.html
@@ -134,7 +134,7 @@
 <ul>
 <li><strong>Bus stop:</strong> <em>&ldquo;Gare Lille Flandres&rdquo;</em> <a href="https://maps.app.goo.gl/DhmhktrX1PyJCVrh6">bus stop</a>. From the Lille Flandres station exit: 150m on your right. From the Lille Europe station exit: 300m in direction to the center of Lille.</li>
 <li><strong>Direction:</strong> <em>&ldquo;Le Parc (Haubourdin)&rdquo;</em></li>
-<li><strong>Exit:</strong> <em>&ldquo;Université Catholique&rdquo;</em> stop and <strong>then walk to the 83 Boulevard Vauban</strong>, about 5min journey.</li>
+<li><strong>Exit:</strong> <em>&ldquo;Université Catholique&rdquo;</em> stop and <strong>then walk to the 83 Boulevard Vauban, about a 5min journey</strong>.</li>
 <li><strong>Total duration:</strong> ~17min</li>
 <li><em>More info about the public transport network in Lille: <a href="https://www.ilevia.fr/itineraires">ilevia.fr</a></em></li>
 </ul>
@@ -144,7 +144,7 @@
 <ul>
 <li><strong>From:</strong> <em>&ldquo;Lille Flandres&rdquo;</em> station</li>
 <li><strong>Direction:</strong> <em>&ldquo;Lille Chu Eurasanté&rdquo;</em></li>
-<li><strong>Exit:</strong> <em>&ldquo;Gambetta&rdquo;</em> stop and <strong>then walk to the 83 Boulevard Vauban, about 13min journey</strong>.</li>
+<li><strong>Exit:</strong> <em>&ldquo;Gambetta&rdquo;</em> stop and <strong>then walk to the 83 Boulevard Vauban, about a 13min journey</strong>.</li>
 <li><strong>Total duration:</strong> ~17min</li>
 <li><em>More info about the public transport network in Lille: <a href="https://www.ilevia.fr/itineraires">ilevia.fr</a></em></li>
 </ul>
@@ -154,7 +154,7 @@
 <ul>
 <li><strong>From:</strong> <em>&ldquo;Lille Flandres&rdquo;</em> or <em>&ldquo;Lille Europe&rdquo;</em> stations</li>
 <li><strong>Direction:</strong> <em>&ldquo;Lomme St. Philibert&rdquo;</em></li>
-<li><strong>Exit:</strong> <em>&ldquo;Cormontaigne&rdquo;</em> stop and <strong>then walk to the 83 Boulevard Vauban, about 10min journey</strong>.</li>
+<li><strong>Exit:</strong> <em>&ldquo;Cormontaigne&rdquo;</em> stop and <strong>then walk to the 83 Boulevard Vauban, about a 10min journey</strong>.</li>
 <li><strong>Total duration:</strong> ~20min</li>
 <li><em>More info about the public transport network in Lille: <a href="https://www.ilevia.fr/itineraires">ilevia.fr</a></em></li>
 </ul>
@@ -190,7 +190,7 @@
 <h2 id="mid-day-lunchs">Mid day lunchs</h2>
 <ul>
 <li>Mid day lunchs are <strong>not provided</strong> by the organisation.</li>
-<li>You&rsquo;ll be able to find lunchtime refreshments around the school (from 5 to 20min) from traditional restaurants to street food restaurants from all over the world.</li>
+<li>You&rsquo;ll be able to find lunchtime refreshments around the school (from 5 to 20min walk) from traditional restaurants to street food restaurants from all over the world.</li>
 <li><strong>Mid day break</strong> lasts <strong>1h50 on Wednesday</strong> July 2 and <strong>2h00 on Thursday</strong> July 3</li>
 </ul>
 <h2 id="social-event">Social event</h2>
